<resources>

    <!-- DO NOT TRANSLATE -->
    <string name="temperature" translatable="false">%d\u00B0</string>
    <string name="infoodle_api_demo" translatable="false">Infoodle API demo</string>
    <string name="plexure_api_demo" translatable="false">Plexure demo</string>

    <string-array name="support_languages" translatable="false">
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="support_languages_values" translatable="false">
        <item>English</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
    </string-array>
    <!-- DO NOT TRANSLATE, End -->

    <string name="app_name">HttpProject</string>
    <string name="main_desc">Each button takes you to an activity which related with a type of API call</string>
    <string name="hint_city_name">Input a city\'s name</string>
    <string name="loading">I\'m loading, please wait&#8230;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_result">No results.</string>
    <string name="title_activity_store_list">Store List</string>
    <string name="tab_text_1">ALL STORES</string>
    <string name="tab_text_2">FAVOURITE</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_distance_near">Nearest</string>
    <string name="action_sort_distance_far">Furthermost</string>
    <string name="action_sort_name">Name</string>
    <string name="action_filter">Filter</string>
    <string name="filter_condition">Filter condition</string>

    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="bible_api_demo">Bible API demo</string>
    <string name="weather_api_demo">Weather API demo</string>
    <string name="intent_filter_valeera_gizmo">Bible</string>

    <string-array name="theme_names">
        <item>Usual</item>
        <item>Black and White</item>
    </string-array>
    <string-array name="theme_values" translatable="false">
        <item>Usual</item>
        <item>BlackAndWhite</item>
    </string-array>

</resources>
