<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        android:icon="@drawable/ic_near_me_white_24dp"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item android:title="@string/action_sort_distance_near"
                android:id="@+id/sort_near" />
            <item android:title="@string/action_sort_distance_far"
                android:id="@+id/sort_far" />
            <item android:title="@string/action_sort_name"
                android:id="@+id/sort_name" />
        </menu>
    </item>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="2"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"
        />
</menu>
